// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - Header - util - MobileDrawerCollapseList MobileDrawerCollapseCompanyList should match snapshot 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
    data-testid="reece-companies-button"
    role="button"
    tabindex="0"
  >
    Reece Companies
    <svg
      class="MuiBox-root css-x84pqq"
      sx="[object Object]"
    >
      arrow-drop-down.svg
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <ul
          class="MuiList-root css-odrezj-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="morrison-supply-company-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://morrisonsupply.test.ecomm.reecedev.us"
            >
              Morrison Supply Company
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="devore-&-johnson-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://devoreandjohnson.test.ecomm.reecedev.us"
            >
              DeVore & Johnson
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="murray-supply-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://murraysupply.test.ecomm.reecedev.us"
            >
              Murray Supply
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="morsco-hvac-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://morscohvacsupply.test.ecomm.reecedev.us"
            >
              Morsco HVAC
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="farnsworth-wholesale-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://fwcaz.test.ecomm.reecedev.us"
            >
              Farnsworth Wholesale
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="wholesale-specialties-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://wholesalespecialties.test.ecomm.reecedev.us"
            >
              Wholesale Specialties
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="fortiline-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://fortiline.test.ecomm.reecedev.us"
            >
              Fortiline
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="l&b-pipe-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://landbpipe.test.ecomm.reecedev.us"
            >
              L&B Pipe
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="irvine-pipe-supply-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://irvinepipe.test.ecomm.reecedev.us"
            >
              Irvine Pipe Supply
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`common - Header - util - MobileDrawerCollapseList MobileDrawerCollapseCompanyList should match snapshot when opened 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
    data-testid="reece-companies-button"
    role="button"
    tabindex="0"
  >
    Reece Companies
    <svg
      class="MuiBox-root css-x84pqq"
      sx="[object Object]"
    >
      arrow-drop-up.svg
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    style="min-height: 0px; height: auto; transition-duration: 300ms;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <ul
          class="MuiList-root css-odrezj-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="morrison-supply-company-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://morrisonsupply.test.ecomm.reecedev.us"
            >
              Morrison Supply Company
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="devore-&-johnson-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://devoreandjohnson.test.ecomm.reecedev.us"
            >
              DeVore & Johnson
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="murray-supply-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://murraysupply.test.ecomm.reecedev.us"
            >
              Murray Supply
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="morsco-hvac-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://morscohvacsupply.test.ecomm.reecedev.us"
            >
              Morsco HVAC
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="farnsworth-wholesale-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://fwcaz.test.ecomm.reecedev.us"
            >
              Farnsworth Wholesale
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="wholesale-specialties-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://wholesalespecialties.test.ecomm.reecedev.us"
            >
              Wholesale Specialties
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="fortiline-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://fortiline.test.ecomm.reecedev.us"
            >
              Fortiline
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="l&b-pipe-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://landbpipe.test.ecomm.reecedev.us"
            >
              L&B Pipe
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="irvine-pipe-supply-button"
            role="button"
            tabindex="0"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1yy3otd-MuiTypography-root-MuiLink-root"
              href="https://irvinepipe.test.ecomm.reecedev.us"
            >
              Irvine Pipe Supply
            </a>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`common - Header - util - MobileDrawerCollapseList MobileDrawerCollapseList should match snapshot for max under Eclipse as logged in Mincron user 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
    data-testid="max-dropdown-button"
    role="button"
    tabindex="0"
  >
    test
    <svg
      class="MuiBox-root css-x84pqq"
      sx="[object Object]"
    >
      arrow-drop-up.svg
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <ul
          class="MuiList-root css-odrezj-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-contracts"
            role="button"
            tabindex="0"
          >
            Contracts
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-orders"
            role="button"
            tabindex="0"
          >
            Orders
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`common - Header - util - MobileDrawerCollapseList MobileDrawerCollapseList should match snapshot for max under Eclipse as logged in user 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
    data-testid="max-dropdown-button"
    role="button"
    tabindex="0"
  >
    test
    <svg
      class="MuiBox-root css-x84pqq"
      sx="[object Object]"
    >
      arrow-drop-up.svg
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <ul
          class="MuiList-root css-odrezj-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-orders"
            role="button"
            tabindex="0"
          >
            Orders
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-previously-purchased-products"
            role="button"
            tabindex="0"
          >
            Previously Purchased Products
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-quotes"
            role="button"
            tabindex="0"
          >
            Quotes
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-lists"
            role="button"
            tabindex="0"
          >
            Lists
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`common - Header - util - MobileDrawerCollapseList MobileDrawerCollapseList should match snapshot for max under Eclipse as logged out user 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
    data-testid="max-dropdown-button"
    role="button"
    tabindex="0"
  >
    test
    <svg
      class="MuiBox-root css-x84pqq"
      sx="[object Object]"
    >
      arrow-drop-up.svg
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <ul
          class="MuiList-root css-odrezj-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-orders"
            role="button"
            tabindex="0"
          >
            Orders
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-invoices"
            role="button"
            tabindex="0"
          >
            Invoices
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-purchase-approvals"
            role="button"
            tabindex="0"
          >
            Purchase Approvals
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-quotes"
            role="button"
            tabindex="0"
          >
            Quotes
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-lists"
            role="button"
            tabindex="0"
          >
            Lists
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`common - Header - util - MobileDrawerCollapseList MobileDrawerCollapseList should match snapshot for max under Eclipse as logged out user while closed 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
    data-testid="max-dropdown-button"
    role="button"
    tabindex="0"
  >
    test
    <svg
      class="MuiBox-root css-x84pqq"
      sx="[object Object]"
    >
      arrow-drop-down.svg
    </svg>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <ul
          class="MuiList-root css-odrezj-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-orders"
            role="button"
            tabindex="0"
          >
            Orders
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-invoices"
            role="button"
            tabindex="0"
          >
            Invoices
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-purchase-approvals"
            role="button"
            tabindex="0"
          >
            Purchase Approvals
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-quotes"
            role="button"
            tabindex="0"
          >
            Quotes
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-19duath-MuiButtonBase-root-MuiListItem-root"
            data-testid="mobile-nav-lists"
            role="button"
            tabindex="0"
          >
            Lists
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
